# davinciauto

./: .env.example  .gitignore  .rgignore  CLAUDE.md  DAVINCI_TIMELINE_INFO.md  DaVinci_導入チェック表.md  ELEVENLABS_MCP_SETUP.md  FINAL_INSTRUCTIONS.md  Makefile  PROJECT_INDEX.md  README.md  README_CSV_MARKER_SYSTEM.md  WORKFLOW_COMPLETE.md  WORKFLOW_GUIDE.md  analyze_images.py  autocut_progress.md  azure_samples_retry.json  azure_test.json  csv_premiere.js  csv_xml_cutter.py  davinci_auto_split.py  davinci_console_marker.py  fix_ep15_simple_timecode.py  fix_ep15_srt.py  fix_ep15_timecode_proper.py  fix_ep15_timecode_yaml_aligned.py  gas_edl_generator.js  gas_final_complete.js  generate_cc_test1.py  generate_edl.py  generate_headers.py  hybrid_tts_strategy.py  mcp_tools.json  orionEP1.md  progress.md  pyproject.toml  regenerate_srt_timecode.py  requirements.txt  storyblocks_report.html  storyblocks_search.py  (+4 more)
.claude/: settings.local.json
AAFexport/: Batch_Export_AAF.jsx
archive/: CLEANUP_LOG.md  README.md
archive/prototype-legacy/: .gitignore  README.md  pyproject.toml
archive/prototype-legacy/examples/sample_project/: README.md
archive/prototype-legacy/examples/sample_project/inputs/: sample.md  sample.srt
archive/prototype-legacy/src/oriontts/: __init__.py  cli.py  pipeline.py  scaffold.py
archive_old_versions/: CSV_FORMAT_SPEC.md  DAVINCI_IMPORT_INSTRUCTIONS.md  EDL_IMPORT_GUIDE.md  NEXT_SESSION_WORKFLOW_TEST.md  README_ARCHIVE.md  README_EDL_WORKFLOW.md  VERIFICATION_COMPLETE_REPORT.md  davinci_auto_split.py  davinci_marker_import.py  edl_validator.py  error_test_data.csv  gas_converter_template.js  gas_fix_data_layout.js  gas_step1_debug.js  gas_step1_pair.js  gas_step1_parse.js  gas_step2_color.js  gas_step2_simple.js  gas_step3_correct.js  gas_step3_export.js  generate_edl.py  perfect_marker_template.csv  real_timeline_test.csv  resolve_marker_system.py  simple_csv_import.py
backend/: eleven_server.py  main.py  mcp_client.py  models.py  requirements.txt
config/: mcp-config.json
davinci_autocut/: .gitignore  CLEAN_COMMANDS.md  CONSOLE_COMMANDS.md  EXTERNAL_VS_INTERNAL.md  PROJECT_SEPARATION.md  README.md  RESEARCH_REQUEST.md  RESOLVE_SETUP_DEBUG.md  main.py
davinciauto_cli/: __main__.py
davinciauto_core/: bgm.py  pipeline.py
docs/: API.md  CLI_BUNDLE.md  CLI_SETUP.md  CLI_SETUP_JA.md  EDITOR_ONE_PAGER.md  ELEVENLABS_MCP_SETUP.md  GUI_LAUNCHER.md  MAPPING.md  MCP_SETUP.md  NAMING.md  OrionEp1_Automation_Handoff.md  PROJECT_INDEX.md  README.md  SELF_CHECK_SCHEMA.json  STRUCTURE.md  USER_GUIDE.md  development_issues.md  shigodeki_release_workflow.drawio  shigodeki_release_workflow.puml  引き継ぎ.md
experiments/: README.md  archive_manifest.json  google_cloud_tts_sample.py  tts_config_loader.py  ttssample.md
gui_app/: config.py  log_watcher.py  main.py  selfcheck.py
gui_steps/: audio_quality_selector.py  enhanced_integrated_workspace.py  enhanced_tts_client.py  integrated_workspace.py  llm_workspace.html  step2_tts_generation.py  step3_subtitle_timing.py  tts_from_tagged_text.py  tts_test_simple.py  wire_only_gui.html  wire_only_gui.py  (+1 more)
(+697 files in other folders)
